--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -21,5 +21,6 @@ body {
     margin: 0 auto;
     display: flex;
     justify-content: center;
-    background: #cf1e92;
+    background: cornflowerblue;
+    /* border: 3px solid navy; */
 }
